--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 <section class="about" id="about">
     <div class="container">
         <div class="profile-img" data-aos="fade-right" data-aos-delay="200">
-            <img src="C:\Users\Papa Shango\Desktop\my_personal_website\ritwick\images\rrit.jpg" alt="" class="my-photo">
+            <img src="C:\Users\Papa Shango\Desktop\anjaliwebsite\MyProfile\images\rrit.jpg" alt="" class="my-photo">
         </div>
         <div class="about-details"  data-aos="fade-left" data-aos-delay="400">
             <div class="about-heading">
