--- a/index.html
+++ b/index.html
@@ -154,14 +154,14 @@
         <ul>
             <li class="date" date-date="2020">
                 <h1>Certificate</h1>
-                    <img src="C:\Users\Papa Shango\Desktop\my_personal_website\ritwick\images\q.png" class="image-brand-logo-ms">
+                    <img src="images/q.png" class="image-brand-logo-ms">
                     <p>
                         Microsoft MTA Certification for Security Fundamentals.
                     </p>
             </li>
             <li class="date" date-date="2019 - Present">
                 <h1>Member of Mozilla Community Rajasthan</h1>
-                <img src="C:\Users\Papa Shango\Desktop\my_personal_website\ritwick\images\moz.PNG" class="image-brand-logo-visa">
+                <img src="images/moz.png" class="image-brand-logo-visa">
                 <p>
                     To align with the Mozilla's goal of building and keeping the internet as public resource open and accessible for everyone.
                 </p>
@@ -169,7 +169,7 @@
             <li class="date" date-date="2020">
                 <h1>Training</h1>
                 <h2>CyberCure Technologies</h2>
-                <img src="C:\Users\Papa Shango\Desktop\my_personal_website\ritwick\images\cyb.PNG" class="image-brand-logo-visa">
+                <img src="images/cyb.png" class="image-brand-logo-visa">
                 <p>
                     Training on Ethical Hacking.
                 </p>
@@ -178,7 +178,7 @@
                 <h1>Intern</h1>
                 <h2>DVS Web Infotech</h2>
                 
-                <img src="C:\Users\Papa Shango\Desktop\my_personal_website\ritwick\images\0.PNG" class="image-brand-logo-visa">
+                <img src="images/0.png" class="image-brand-logo-visa">
                 <p>
                     Designed android application using Ionic framework, XML and Typescript .
                 </p>
@@ -322,7 +322,7 @@
         </div>
         <div class="portfolio-item">
             <div class="portfolio-img has-margin-right" data-aos="fade-right" data-aos-delay="200">
-                <img src="C:\Users\Papa Shango\Desktop\my_personal_website\ritwick\images\cerificate\0.jpg" alt="">
+                <img src="images/certificate/0.jpg" alt="">
             </div>
             <div class="portfolio-description" data-aos="fade-left" data-aos-delay="400">
                 <h6>
@@ -350,12 +350,12 @@
                 </p>
             </div>
             <div class="portfolio-img" data-aos="fade-left" data-aos-delay="800">
-                <img src="C:\Users\Papa Shango\Desktop\my_personal_website\ritwick\images\cerificate\15.jpg" alt="">
+                <img src="images/certificate/15.jpg" alt="">
             </div>
         </div>
         <div class="portfolio-item">
             <div class="portfolio-img has-margin-right" data-aos="fade-right" data-aos-delay="1000">
-                <img src="C:\Users\Papa Shango\Desktop\my_personal_website\ritwick\images\cerificate\9.jpg" alt="">
+                <img src="images/certificate/9.jpg" alt="">
             </div>
             <div class="portfolio-description" data-aos="fade-left" data-aos-delay="1200">
                 <h6>
