changes in project
updated images

--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
             </li>
             <li class="date" date-date="2019 - Present">
                 <h1>Member of Mozilla Community Rajasthan</h1>
-                <img src="images/moz.png" class="image-brand-logo-visa">
+                <img src="images/moz.PNG" class="image-brand-logo-visa">
                 <p>
                     To align with the Mozilla's goal of building and keeping the internet as public resource open and accessible for everyone.
                 </p>
@@ -322,7 +322,7 @@
         </div>
         <div class="portfolio-item">
             <div class="portfolio-img has-margin-right" data-aos="fade-right" data-aos-delay="200">
-                <img src="images/certificate/0.jpg" alt="">
+                <img src="certificate/0.jpg" alt="">
             </div>
             <div class="portfolio-description" data-aos="fade-left" data-aos-delay="400">
                 <h6>
@@ -350,12 +350,12 @@
                 </p>
             </div>
             <div class="portfolio-img" data-aos="fade-left" data-aos-delay="800">
-                <img src="images/certificate/15.jpg" alt="">
+                <img src="certificate/15.jpg" alt="">
             </div>
         </div>
         <div class="portfolio-item">
             <div class="portfolio-img has-margin-right" data-aos="fade-right" data-aos-delay="1000">
-                <img src="images/certificate/9.jpg" alt="">
+                <img src="certificate/9.jpg" alt="">
             </div>
             <div class="portfolio-description" data-aos="fade-left" data-aos-delay="1200">
                 <h6>
