--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@
         </div>
         <div class="portfolio-item">
             <div class="portfolio-img has-margin-right" data-aos="fade-right" data-aos-delay="200">
-                <img src="cerificate/0.jpg" alt="">
+                <img src="images/cerificate/0.jpg" alt="">
             </div>
             <div class="portfolio-description" data-aos="fade-left" data-aos-delay="400">
                 <h6>
@@ -350,12 +350,12 @@
                 </p>
             </div>
             <div class="portfolio-img" data-aos="fade-left" data-aos-delay="800">
-                <img src="cerificate/15.jpg" alt="">
+                <img src="images/cerificate/15.jpg" alt="">
             </div>
         </div>
         <div class="portfolio-item">
             <div class="portfolio-img has-margin-right" data-aos="fade-right" data-aos-delay="1000">
-                <img src="cerificate/9.jpg" alt="">
+                <img src="images/cerificate/9.jpg" alt="">
             </div>
             <div class="portfolio-description" data-aos="fade-left" data-aos-delay="1200">
                 <h6>
