path image editing
gallery image path edit

--- a/gallery-photo.html
+++ b/gallery-photo.html
@@ -11,7 +11,7 @@
     <h1>Scholastic Certificates</h1>
     <div class="gallery">
 
-        <a href="C:\Users\Papa Shango\Desktop\my_personal_website\ritwick\images\cerificate\0.jpg" data-lightbox="mygallery"><img src="C:\Users\Papa Shango\Desktop\my_personal_website\ritwick\images\cerificate\0-Copy.jpg"></a>
+        <a href="images\cerificate\0.jpg" data-lightbox="mygallery"><img src="images\cerificate\0-Copy.jpg"></a>
 
         <a href="C:\Users\Papa Shango\Desktop\my_personal_website\ritwick\images\cerificate\1.jpg" data-lightbox="mygallery"><img style="width: 125px" src="C:\Users\Papa Shango\Desktop\my_personal_website\ritwick\images\cerificate\1-Copy.jpg"></a>
         <a href="C:\Users\Papa Shango\Desktop\my_personal_website\ritwick\images\cerificate\2.jpg" data-lightbox="mygallery"><img style="width: 125px" src="C:\Users\Papa Shango\Desktop\my_personal_website\ritwick\images\cerificate\2-Copy.jpg"></a>
