--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
             
               <li class="date" date-date="2020">
                 <h1>Virtual Internship</h1>
-                    <img src="images/q.png" class="image-brand-logo-ms">
+                    <img src="images/anz.png" class="image-brand-logo-ms">
                     <p>
                        ANZ 
                     </p>
@@ -166,7 +166,7 @@
             
             <li class="date" date-date="2020">
                 <h1>Virtual Internship</h1>
-                    <img src="images/q.png" class="image-brand-logo-ms">
+                    <img src="images/jp.jpg" class="image-brand-logo-ms">
                     <p>
                        JPMorgan Chase & Co.
                     </p>
